--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,7 +332,11 @@ header .navbar ul li a:hover {
     margin-top: 12rem;
   }
   .home .image img {
-    margin-top: -12rem;
+    margin-top: -1rem;
+    width: 100%;
+  }
+  .home .image {
+    margin-right: 20rem;
   }
   .home .content p {
     font-size: 2.2rem;
